--- a/src/scss/_Navbar.scss
+++ b/src/scss/_Navbar.scss
@@ -31,9 +31,9 @@
     .menu-icons .menu-link
     {
         margin:0.8rem;
-        background-color: var(--color-white);
-        color:var(--color-dark);
-        border-radius: var(--border-radius-rounded);
+        background-color: white;
+        color:#23262A;
+        border-radius: 50%;
         padding:0.4rem 0.6rem;
     }
 
