--- a/src/scss/_Navbar.scss
+++ b/src/scss/_Navbar.scss
@@ -1,46 +1,50 @@
 
 .__navbar {
     height:80px;
-    border: 1px solid black;
+    
     position:fixed;
     align-items: center;
     width:100%;
+    z-index:1;
+    opacity: 1;
 
-    .container{
+    .container
+    {
         display:flex;
         justify-content: space-between;
         align-items: center;
         max-width: 1680px;
         margin-top: 0.5rem;
-    }
+    
 
-    .navLinks .navLink
-    {
-      color: black;
-      margin:1.2rem;
-      text-decoration: none;
-      font-weight: bold;
-    }
+        .navCategories .navCategory
+        {
+        color: black;
+        margin:1.2rem;
+        text-decoration: none;
+        font-weight: bold;
+        }
 
-    .navLinks .navLink:hover
-    {
-        color: #FF7373;
-        transition: 0.2s ease-in-out;
-    }
+        .navCategories .navCategory:hover
+        {
+            color: #FF7373;
+            transition: 0.2s ease-in-out;
+        }
 
-    .menu-icons .menu-link
-    {
-        margin:0.8rem;
-        background-color: white;
-        color:#23262A;
-        border-radius: 50%;
-        padding:0.4rem 0.6rem;
-    }
-
-    .menu-icons .menu-link:hover{
-    transition: 0.2s ease-in-out;
-    color:var(--color-coral);
-    background-color: #23262A;
-    }
+        .menu-icons a
+        {
+            margin:0.8rem;
+            padding:0.4rem 0.6rem;
+            color: black;
+            background-color: white;
+            border-radius: 45rem;
+        
+        }
+        .menu-icons a:hover 
+        {
+            color:#FF7373;
+            transition:0.2s ease-in-out;
+        }
+}
 }
 
