--- a/src/scss/_featuredProducts.scss
+++ b/src/scss/_featuredProducts.scss
@@ -12,9 +12,7 @@
     }
     .container
     {
-        display:flex;
-        justify-content: space-evenly;
-        align-items: center;
+        display:grid;    
     }
 
     
