--- a/src/scss/_ContactForm.scss
+++ b/src/scss/_ContactForm.scss
@@ -1,65 +1,83 @@
 .commentForm 
 {
-    margin-top:5rem;
-    
-    h5
-    {
-        margin-left: 25.3rem;
+    margin-top:3.75rem;
+
+    .container{
+        max-width: 1100px;
+
+    }
+
+    h5 {
+        text-align: center;
         margin-bottom: 2rem;
         font-weight: bold;
     }
 
-     .contact_container
-    {
-        position:relative;
-        display:flex;
-        justify-content: center;
-        align-items:center;
-        gap:1.7rem;
-        
-    }
-      .comment_container
-    {
-       
-        position:relative;
-        display:flex;
-        justify-content: space-evenly;
-        align-items:center;
-        text-align: start;
-        
+    form {
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        gap:2.5rem;
+
+        input {
+            width:100%;
+            padding:18px 20px;
+            border: 1px solid #BEBEBE;
+        }
+
+        .textarea {
+            grid-column: 1 / -1
+        }
+
+        textarea {
+           
+            width:100%;
+            height:140px;
+            padding: 18px 20px;
+            border: 1px solid #BEBEBE;
+            resize:none;
+        }
     }
 
-      .btn-theme
-    {
-        font-weight: bold;
-        margin-left:25.2rem;
-        bottom:0;
-        padding: 0.5rem 2rem;
-        background-color:#FF7373;
-        width:15rem;
-        height:3rem;
+    .btn-submit {
+        position:relative;
         color:white;
-        border-radius: 0%;
-        
+        background-color:#FF7373;
+        text-align: center;
+        border:none;
+        outline:none;
+        padding:20px 50px;
+        width:100%;
+        grid-column: 1 / -1;
+       
+        &:hover
+        {
+            background-color: black;
+            color:white;
+            transition: 0.2s ease-in;
+        }
     }
 
-    #comment_name
-    {
-        width:33.625rem;
-        height:3.125rem;
-          
+    .error {
+        color: #FF7373;
+        border: 1px solid #FF7373;
     }
-    
-    #comment_email
-    {
-        width:33.625rem;
-        height:3.125rem;
+
+    .errorMessage {
+        margin-top: 5px;
+        color:#FF7373;
+        font-size: 0.8em;
+
+
     }
-    
-    #comment_comment
-    {
-        
-        width:69.375rem;
-        height:8.75rem;
+
+
+}
+
+@media(min-width: 768px){
+    .contact-form {
+        form {
+
+           grid-template-columns: 1fr 1fr;
+        }
     }
 }
