--- a/src/scss/_ContactForm.scss
+++ b/src/scss/_ContactForm.scss
@@ -2,27 +2,26 @@
 {
     margin-top:3.75rem;
 
-    .container{
-        max-width: 1100px;
-
-    }
-
     h5 {
         text-align: center;
         margin-bottom: 2rem;
         font-weight: bold;
+        font-size: 1.25rem;
     }
 
     form {
         display:grid;
         grid-template-columns: 1fr 1fr;
         gap:2.5rem;
+        
 
         input {
             width:100%;
             padding:18px 20px;
             border: 1px solid #BEBEBE;
         }
+
+      
 
         .textarea {
             grid-column: 1 / -1
@@ -36,6 +35,7 @@
             border: 1px solid #BEBEBE;
             resize:none;
         }
+
     }
 
     .btn-submit {
@@ -60,6 +60,7 @@
     .error {
         color: #FF7373;
         border: 1px solid #FF7373;
+        
     }
 
     .errorMessage {
@@ -71,6 +72,7 @@
     }
 
 
+
 }
 
 @media(min-width: 768px){
@@ -78,6 +80,19 @@
         form {
 
            grid-template-columns: 1fr 1fr;
+        }
+    }
+}
+
+@media (max-width:412px){
+    .contact-form{
+        form{
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            h5{
+                text-align: start;
+            }
         }
     }
 }
