försöker koda en valideringsmetod för varje fält, samt en som kallar på de andra

--- a/src/scss/_ContactForm.scss
+++ b/src/scss/_ContactForm.scss
@@ -21,7 +21,15 @@
             border: 1px solid #BEBEBE;
         }
 
-      
+        .validFailName {
+            border: 1px solid red;
+        }
+        .validFailEmail {
+            border: 1px solid red;
+        }
+        .validFailComment {
+            border: 1px solid red;
+        }
 
         .textarea {
             grid-column: 1 / -1
