--- a/src/scss/_ContactForm.scss
+++ b/src/scss/_ContactForm.scss
@@ -21,15 +21,10 @@
             border: 1px solid #BEBEBE;
         }
 
-        .validFailName {
+        .validFail {
             border: 1px solid red;
         }
-        .validFailEmail {
-            border: 1px solid red;
-        }
-        .validFailComment {
-            border: 1px solid red;
-        }
+
 
         .textarea {
             grid-column: 1 / -1
