Kopplar upp mot API

--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -5,6 +5,8 @@
     align-items: center;
     height:5rem;
     width:100%;
-    margin-top:3rem;
+    margin-top:100rem;
     background-color: #f3f3f3;
+    position:relative;
+    bottom:0;
 }
