--- a/src/scss/_productCard.scss
+++ b/src/scss/_productCard.scss
@@ -2,7 +2,7 @@
 .card
 {
    border:none;
-   width:255px;
+   width:20.688rem;
    
   
    
@@ -53,7 +53,6 @@
    {
     width:100%;
     object-fit: cover;
-    height:13.125rem;
     position:relative;
 
    }
