--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,4 +9,7 @@
 @import './featuredProducts';
 @import './productCard';
 @import './breadcrumbSection';
-@import './Home/PamelaSection'
+@import './Home/PamelaSection';
+@import './_gridSection';
+@import './_gridSection2';
+@import './Home/BigProductBox'
