komplett uppbyggnad, städning kvar

--- a/src/scss/_gridSection2.scss
+++ b/src/scss/_gridSection2.scss
@@ -6,6 +6,7 @@
         align-items: start;
         gap:4rem;
         margin-left:6.7rem;
+        margin-bottom: 5rem;
     }
 
     .BoxContainer2 {
