--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -1,12 +1,31 @@
-.footerContainer
-{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    height:5rem;
-    width:100%;
-    margin-top:100rem;
-    background-color: #f3f3f3;
-    position:relative;
-    bottom:0;
+.foot{
+
+    border:1px solid #f5f5f5;
+
+    background: #f5f5f5;
+
+    margin-top:3rem;
+
+
+
+
+    .Footercontainer{
+
+        text-align: center;
+        }
+
+    
+
+    .footer-links{
+
+        margin-top:2rem;
+        margin-bottom:1rem;
+
+    }
+
+    .footer-links a{
+
+        margin:0.5rem;
+        color:#23262A;
+    }
 }
