--- a/src/scss/_Navbar.scss
+++ b/src/scss/_Navbar.scss
@@ -16,13 +16,14 @@
     {
         position:relative;
         display:flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         max-width: 1680px;
+        padding-top: 0.5rem;
         
         
         img {
-         position: absolute;
+         position: relative;
          left:0;
          top:0.5rem;
         }
@@ -30,6 +31,7 @@
         .navCategories
         {
             margin-top:1.5rem;
+            margin-left:8rem;
         }
         .navCategories .navCategory
         {
@@ -37,6 +39,7 @@
         margin:1.2rem;
         text-decoration: none;
         font-weight: bold;
+       
         
         }
 
@@ -45,27 +48,65 @@
             color: #FF7373;
             transition: 0.2s ease-in-out;
         }
+    
+
 
         .menu-icons {
-            position: absolute;
-            right:0;
             margin-top:1.5rem;
                 
-           a {
+           .menu-link {
                 margin:0.8rem;
-                padding:0.4rem 0.6rem;
+                padding:0.8rem 1rem;
                 color: black;
                 background-color: white;
                 border-radius: 45rem;
+                position:relative;
 
                 &:hover {
                     color:#FF7373;
                     transition: all .2s;
                 }
-            }
 
+                &:hover span {
+                    color:#fff;
+                    background-color: #000;
+                    transition: all .2s;
+                }
+           
+                .shoppingBadge {
+                    background-color:#FF7373;
+                    color:white;
+                    position:absolute;
+                    top: -1rem;
+                    right:0rem;
+                    align-self: center;
+                    line-height: 0.4rem;
+                    height:25px;
+                    width:25px;
+                    border-radius: 45rem;
+                    padding:0.5rem;
+
+
+                }
+
+                .wishingBadge {
+                    background-color:#FF7373;
+                    color:white;
+                    position:absolute;
+                    top: -1rem;
+                    right:0rem;
+                    align-self: center;
+                    line-height: 0.4rem;
+                    height:25px;
+                    width:25px;
+                    border-radius: 45rem;
+                    padding:0.5rem;
+                }
+
+            }
+          }
         }
          
 }
-}
+
 
