--- a/src/scss/_ShopButton.scss
+++ b/src/scss/_ShopButton.scss
@@ -34,3 +34,25 @@
     border-bottom: 1px solid #FFF;
     border-right: 1px solid #FFF; 
 }
+
+  button:hover {
+    background-color: #000;
+    color:#fff;
+    transition:0.2s ease-in-out;
+
+    .top-left {
+        background-color: #000;
+        border: solid 1px #fff;
+        border-right-color: #000;
+        border-bottom-color:#000;
+    
+    }
+
+    .bottom-right {
+        background-color: #000;
+        border-left-color: #000;
+        border-top-color:#000;
+        border-bottom: 1px solid #fff;
+        border-right: 1px solid #fff; 
+    }
+}
