--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -12,4 +12,5 @@
 @import './Home/PamelaSection';
 @import './_gridSection';
 @import './_gridSection2';
-@import './Home/BigProductBox'
+@import './Home/BigProductBox';
+@import './InfoBox';
